--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,12 @@
-Django==3.1.7
+asgiref==3.5.2
+Django==4.1.2
+django-cors-headers==3.13.0
+django-filter==22.1
+djangorestframework==3.14.0
+Markdown==3.4.1
+mysql-connector-python==8.0.31
+mysqlclient==2.1.1
+protobuf==3.20.1
 PyMySQL==1.0.2
+pytz==2022.6
+sqlparse==0.4.3
